Version 1.0.1
--------------
- started work on experimental "get source" plugin
- fixed an incorrect button label for Loading html tutorials (r1342)

Release 1.0: starting point